--- a/src/main/webapp/WEB-INF/templetes/default.xhtml
+++ b/src/main/webapp/WEB-INF/templetes/default.xhtml
@@ -65,7 +65,9 @@
 		<h:outputText value="Desenvolvedor: Jaelson" />
 		<br/>
 		<h:outputText value="Sujestão ou duvida mande um" />
-		<h:outputText value=" e-mail:jaelsonrc@ymail.com" />
+		<h:outputText value=" e-mail:jaelsonrc@ymail.com" />		
+		<h:outputText value="Aprendi muito com curso Devdojo recomendo assistir e se inscrever no canal foi de la que fiz a maioria do codigos
+		https://www.youtube.com/playlist?list=PL62G310vn6nGH6ugBwHbskXxKIaoqz_dk" />
 	</p:dialog>
 
 	<h:outputScript library="primefaces" name="jquery/jquery.js" />
